# media-kit

libs/windows/media_kit_libs_windows_video/windows/: CMakeLists.txt
